html part1 done

--- a/index.html
+++ b/index.html
@@ -1,12 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>崔磊的个人简历</title>
 </head>
+
 <body>
-    
+    <div class="topNavBar">
+        <img src="#" alt="logo">
+        <nav>
+            <ul>
+                <li>
+                    <a href="http://">ABOUT</a>
+                </li>
+                <li>
+                    <a href="http://">SKILLS</a>
+                </li>
+                <li>
+                    <a href="http://">PORTFOLIO</a>
+                </li>
+                <li>
+                    <a href="http://">EXPERIENCE</a>
+                </li>
+                <li>
+                    <a href="http://">PRICING</a>
+                </li>
+                <li>
+                    <a href="http://">BLOG</a>
+                </li>
+                <li>
+                    <a href="http://">CALENDAR</a>
+                </li>
+                <li>
+                    <a href="http://">CONTACT</a>
+                </li>
+                <li>
+                    <a href="http://">OTHER</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+    <div class="banner" style="background-image: url(#);"></div>
+    <main>
+        <div class="picture">
+            <img src="" alt="头像">
+        </div>
+        <div class="text">
+            <div class="profile">
+                <span class="welcome">hello</span>
+                <h1>崔磊</h1>
+                <p>前端开发工程师</p>
+                <hr>
+                <dl>
+                    <dt>年龄</dt>
+                    <dd>25</dd>
+                    <dt>所在城市</dt>
+                    <dd>深圳</dd>
+                    <dt>邮箱</dt>
+                    <dd>cuilei5205189@icloud.com</dd>
+                    <dt>手机</dt>
+                    <dd>13058054571</dd>
+                    <dt>blog</dt>
+                    <dd>cuilei.top</dd>
+                </dl>
+                <footer class="media">
+                    <a href="#" alt=".."></a>
+                    <a href="#" alt=".."></a>
+                    <a href="#" alt=".."></a>
+                    <a href="#" alt=".."></a>
+                    <a href="#" alt=".."></a>
+                    <a href="#" alt=".."></a>
+                </footer>
+            </div>
+        </div>
+
+        <a href="#" class="button">下载pdf</a>
+        <p>崔磊，前端工程师。
+            <br>技能：前端开发，node.js开发。
+        </p>
+    </main>
+
 </body>
+
 </html>
