--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
             <br>技能：前端开发，node.js开发。
         </p>
     </main>
+    <section>
+        <h2>技能</h2>
+        <ol>
+            <li>HTML 5 &amp; CSS 3</li>
+            <li>Javascript</li>
+            <li>jQuery</li>
+            <li>Vue</li>
+            <li>React</li>
+            <li>HTTP</li>
+        </ol>
+        <h2>作品集</h2>
+        <nav>
+            <ol>
+                <li>所有</li>
+                <li>框架</li>
+                <li>原生 JS &amp; CSS</li>
+            </ol>
+        </nav>
+
+        <div class="jobs">
+            <div class="big"></div>
+            <div class="small"></div>
+            <div class="small"></div>
+        </div>
+    </section>
 
 </body>
 
