--- a/index.html
+++ b/index.html
@@ -5,40 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
     <title>崔磊的个人简历</title>
 </head>
 
 <body>
     <div class="topNavBar">
-        <img src="#" alt="logo">
+        <a class="logo" src="#" alt="logo">
+            <span class="rs">RS</span>
+            <span class="card">card</span>
+        </a>
         <nav>
-            <ul>
+            <ul class="clearfix">
                 <li>
-                    <a href="http://">ABOUT</a>
+                    <a href="http://">关于</a>
                 </li>
                 <li>
-                    <a href="http://">SKILLS</a>
+                    <a href="http://">技能</a>
                 </li>
                 <li>
-                    <a href="http://">PORTFOLIO</a>
+                    <a href="http://">作品</a>
                 </li>
                 <li>
-                    <a href="http://">EXPERIENCE</a>
+                    <a href="http://">经历</a>
                 </li>
                 <li>
-                    <a href="http://">PRICING</a>
+                    <a href="http://">博客</a>
                 </li>
                 <li>
-                    <a href="http://">BLOG</a>
+                    <a href="http://">日历</a>
                 </li>
                 <li>
-                    <a href="http://">CALENDAR</a>
+                    <a href="http://">联系方式</a>
                 </li>
                 <li>
-                    <a href="http://">CONTACT</a>
-                </li>
-                <li>
-                    <a href="http://">OTHER</a>
+                    <a href="http://">其他</a>
                 </li>
             </ul>
         </nav>
