--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>崔磊的个人简历</title>
 </head>
 
 <body>
-    <div class="topNavBar">
-        <a class="logo" src="#" alt="logo">
+    <div class="topNavBar clearfix">
+        <a class="logo" href="#" alt="logo">
             <span class="rs">RS</span>
             <span class="card">card</span>
         </a>
