--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
         </nav>
     </div>
-    <div class="banner" style="background-image: url(#);"></div>
+    <div class="banner"></div>
     <main>
         <div class="picture">
             <img src="" alt="头像">
