--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="//at.alicdn.com/t/font_733810_hdekfvifc65.js
+"></script>
+    <style type="text/css">
+        .icon {
+            width: 1em;
+            height: 1em;
+            vertical-align: -0.15em;
+            fill: currentColor;
+            overflow: hidden;
+        }
+    </style>
     <title>崔磊的个人简历</title>
 </head>
 
 <body>
+
     <div class="topNavBar clearfix">
         <a class="logo" href="#" alt="logo">
             <span class="rs">RS</span>
@@ -45,40 +57,60 @@
             </ul>
         </nav>
     </div>
-    <div class="banner"></div>
+    <div class="banner">
+        <div class="mask">
+        </div>
+    </div>
     <main>
-        <div class="picture">
-            <img src="" alt="头像">
-        </div>
-        <div class="text">
-            <div class="profile">
-                <span class="welcome">hello</span>
-                <h1>崔磊</h1>
-                <p>前端开发工程师</p>
-                <hr>
-                <dl>
-                    <dt>年龄</dt>
-                    <dd>25</dd>
-                    <dt>所在城市</dt>
-                    <dd>深圳</dd>
-                    <dt>邮箱</dt>
-                    <dd>cuilei5205189@icloud.com</dd>
-                    <dt>手机</dt>
-                    <dd>13058054571</dd>
-                    <dt>blog</dt>
-                    <dd>cuilei.top</dd>
-                </dl>
-                <footer class="media">
-                    <a href="#" alt=".."></a>
-                    <a href="#" alt=".."></a>
-                    <a href="#" alt=".."></a>
-                    <a href="#" alt=".."></a>
-                    <a href="#" alt=".."></a>
-                    <a href="#" alt=".."></a>
-                </footer>
+        <div class="userCard">
+            <div class="pictureAndText clearfix">
+                <div class="picture">
+                    <img src="./img/avatar.jpg" width="296" height="343" alt="头像">
+                </div>
+                <div class="text">
+                    <div class="profile clearfix">
+                        <span class="welcome">hello
+                            <span class="triangle"></span>
+                        </span>
+                        <h1>崔磊</h1>
+                        <p>前端开发工程师</p>
+                        <hr>
+                        <dl class="clearfix">
+                            <dt>年龄</dt>
+                            <dd>25</dd>
+                            <dt>所在城市</dt>
+                            <dd>深圳</dd>
+                            <dt>邮箱</dt>
+                            <dd>cuilei5205189@icloud.com</dd>
+                            <dt>手机</dt>
+                            <dd>13058054571</dd>
+                        </dl>
+                    </div>
+                </div>
             </div>
+            <footer class="media">
+                <a href="#" alt="..">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weixin"></use>
+                    </svg>
+                </a>
+                <a href="#" alt="..">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg>
+                </a>
+                <a href="#" alt="..">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-twitter"></use>
+                    </svg>
+                </a>
+                <a href="#" alt="..">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
+            </footer>
         </div>
-
         <a href="#" class="button">下载pdf</a>
         <p>崔磊，前端工程师。
             <br>技能：前端开发，node.js开发。
