download button done

--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 </a>
             </footer>
         </div>
-        <a href="#" class="button">下载pdf</a>
+        <div class="downloadButton-wrapper">
+            <a href="#" class="downloadButton" download>下载pdf简历</a>
+        </div>
         <p>崔磊，前端工程师。
             <br>技能：前端开发，node.js开发。
         </p>
