--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="userCard">
             <div class="pictureAndText clearfix">
                 <div class="picture">
-                    <img src="./img/avatar.jpg" width="296" height="343" alt="头像">
+                    <img src="./img/1avatar.jpg" width="260px" alt="头像">
                 </div>
                 <div class="text">
                     <div class="profile clearfix">
@@ -84,6 +84,10 @@
                             <dd>cuilei5205189@icloud.com</dd>
                             <dt>手机</dt>
                             <dd>13058054571</dd>
+                            <dt>博客</dt>
+                            <dd>
+                                <a href="http://www.cuilei.top" target="_blank">cuilei.top</a>
+                            </dd>
                         </dl>
                     </div>
                 </div>
@@ -114,19 +118,67 @@
         <div class="downloadButton-wrapper">
             <a href="#" class="downloadButton" download>下载pdf简历</a>
         </div>
-        <p>崔磊，前端工程师。
-            <br>技能：前端开发，node.js开发。
+        <p class="selfIntroduction">崔磊，前端工程师。
+            <br>前端开发，node.js开发。
         </p>
     </main>
-    <section>
+    <section class="skills">
         <h2>技能</h2>
-        <ol>
-            <li>HTML 5 &amp; CSS 3</li>
-            <li>Javascript</li>
-            <li>jQuery</li>
-            <li>Vue</li>
-            <li>React</li>
-            <li>HTTP</li>
+        <ol class="clearfix">
+            <li>
+                <h3>
+                    HTML 5 &amp; CSS 3
+                </h3>
+                <div class="prograssBar">
+                    <div class="prograss">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    jQuery
+                </h3>
+                <div class="prograssBar">
+                    <div class="prograss">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Javascript
+                </h3>
+                <div class="prograssBar">
+                    <div class="prograss">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    React
+                </h3>
+                <div class="prograssBar">
+                    <div class="prograss">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    HTTP
+                </h3>
+                <div class="prograssBar">
+                    <div class="prograss">
+                    </div>
+                </div>
+            </li>
+            <li>
+                <h3>
+                    Vue
+                </h3>
+                <div class="prograssBar">
+                    <div class="prograss">
+                    </div>
+                </div>
+            </li>
         </ol>
         <h2>作品集</h2>
         <nav>
@@ -143,6 +195,7 @@
             <div class="small"></div>
         </div>
     </section>
+    <section class="Portfolio"></section>
 
 </body>
 
