--- a/index.html
+++ b/index.html
@@ -180,22 +180,48 @@
                 </div>
             </li>
         </ol>
+    </section>
+    <section class="portfolio">
         <h2>作品集</h2>
         <nav>
-            <ol>
-                <li>所有</li>
-                <li>框架</li>
-                <li>原生 JS &amp; CSS</li>
+            <ol class="clearfix">
+                <li id="portfolio1">所有</li>
+                <li id="portfolio2">框架</li>
+                <li id="portfolio3">原生 JS &amp; CSS</li>
             </ol>
+            <div class="bar">
+                <div id="state" class="innerBar state-1">
+                </div>
+            </div>
         </nav>
-
-        <div class="jobs">
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
+        <script>
+            portfolio1.onclick = function () {
+                state.className = "innerBar state-1"
+            }
+            portfolio2.onclick = function () {
+                state.className = "innerBar state-2"
+            }
+            portfolio3.onclick = function () {
+                state.className = "innerBar state-3"
+            }
+        </script>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="works" style="height: 597px;">
+            <div class="big" style="top: 0;left: 0;">
+                <img src="./img/photo-1422480041422-130238c67fe2-1-2-2-1-1-607x576.jpg" alt="">
+            </div>
+            <div class="small" style="top: 0;left: 637px;">
+                <img src="./img/photo-1421757295538-9c80958e75b0-2-2-1-1-294x278.jpg" alt="">
+            </div>
+            <div class="small" style="top: 298px;left: 637px;">
+                <img src="./img/kaboompics-1-2-1-1-294x278.jpg" alt="">
+            </div>
         </div>
+
     </section>
-    <section class="Portfolio"></section>
 
 </body>
 
