阶段性完成

--- a/cuilei_resume_redo/index_redo.html
+++ b/cuilei_resume_redo/index_redo.html
@@ -4,41 +4,149 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>崔磊的简历</title>
     <link rel="stylesheet" href="./style_redo.css">
-    <!-- 引入googlefonts -->
-    <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
+    <script src="//at.alicdn.com/t/font_733809_gtuu4aoiifa.js"></script>
+    <style type="text/css">
+        .icon {
+            width: 1em;
+            height: 1em;
+            vertical-align: -0.15em;
+            fill: currentColor;
+            overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="topNav">
-        <div class="logo">
-            <a href="">
-                <span class="logo-rs">rs</span>
-                <span class="logo-card">card</span>
-            </a>
-        </div>
-        <ul class="item">
-            <li>
-                <a href="">关于</a>
-            </li>
-            <li>
-                <a href="">技能</a>
-            </li>
-            <li>
-                <a href="">作品集</a>
-            </li>
-            <li>
-                <a href="">经历</a>
-            </li>
-            <li>
-                <a href="">博客</a>
-            </li>
-            <li>
-                <a href="">其他</a>
-            </li>
-        </ul>
+    <div class="topNavWrapper">
+        <nav class="topNav clearfix">
+            <div class="logo">
+                <a href="">
+                    <span class="logo-rs">rs</span>
+                    <span class="logo-card">card</span>
+                </a>
+            </div>
+            <ul class="item clearfix">
+                <li>
+                    <a href="">关于</a>
+                </li>
+                <li>
+                    <a href="">技能</a>
+                </li>
+                <li>
+                    <a href="">作品集</a>
+                </li>
+                <li>
+                    <a href="">经历</a>
+                </li>
+                <li>
+                    <a href="">博客</a>
+                </li>
+                <li>
+                    <a href="">其他</a>
+                </li>
+            </ul>
+    </div>
     </nav>
+    <div class="banner">
+        <div class="bgImg">
+            <div class="mask"></div>
+        </div>
+    </div>
+    <div class="userCard ">
+        <div class="profile clearfix">
+            <div class="avatar">
+                <img src="../img/1avatar.jpg" alt="头像">
+            </div>
+            <div class="text">
+                <div class="welcome">
+                    hello
+                </div>
+                <div class="triangle">
+                    
+                </div>
+                <div class="title">
+                    <h1>崔磊</h1>
+                    <h2>前端工程师、建筑师</h2>
+                </div>
+                <hr>
+                <dl class="clearfix">
+                    <dt>
+                        年龄
+                    </dt>
+                    <dd>
+                        1993.08.08
+                    </dd>
+                    <dt>
+                        地址
+                    </dt>
+                    <dd>
+                        广东省深圳市南山西丽华昌大厦701
+                    </dd>
+                    <dt>
+                        邮件
+                    </dt>
+                    <dd>
+                        <a href="mailto:cuilei5205189@icloud.com">cuilei5205189@icloud.com</a>
+                    </dd>
+                    <dt>
+                        手机
+                    </dt>
+                    <dd>
+                        13058054571
+                    </dd>
+                    <dt>
+                        假期
+                    </dt>
+                    <dd>
+                        <span class="calendar">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-rili"></use>
+                            </svg>
+                            2018.08.15
+                        </span>
+                    </dd>
+                    <dt>
+                        个人网站
+                    </dt>
+                    <dd>
+                        <a class="blog" href="https://blog.cuilei.top">
+                            <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-boke"></use>
+                            </svg>
+                            blog.cuilei.top</a>
+                    </dd>
+
+
+                </dl>
+            </div>
+        </div>
+        <footer>
+            <div class="iconfont">
+                <a href="">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-twitter"></use>
+                    </svg>
+                </a>
+                <a href="">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-instagram"></use>
+                    </svg>
+                </a>
+                <a href="">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github1"></use>
+                    </svg>
+                </a>
+                <a href="">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo1"></use>
+                    </svg>
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
