--- a/cuilei_resume_redo/index_redo.html
+++ b/cuilei_resume_redo/index_redo.html
@@ -64,7 +64,7 @@
                     hello
                 </div>
                 <div class="triangle">
-                    
+
                 </div>
                 <div class="title">
                     <h1>崔磊</h1>
@@ -146,6 +146,8 @@
                 </a>
             </div>
         </footer>
+        <div class="resumeDownload"></div>
+        <a href="">下载pdf简历</a>
     </div>
 </body>
 
