--- a/index.html
+++ b/index.html
@@ -9,53 +9,45 @@
     <link rel="stylesheet" href="style.css">
     <script src="//at.alicdn.com/t/font_733810_hdekfvifc65.js
 "></script>
-    <style type="text/css">
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-    </style>
     <title>崔磊的个人简历</title>
 </head>
 
 <body>
-
-    <div class="topNavBar clearfix">
-        <a class="logo" href="#" alt="logo">
-            <span class="rs">RS</span>
-            <span class="card">card</span>
-        </a>
-        <nav>
-            <ul class="clearfix">
-                <li>
-                    <a href="http://">关于</a>
-                </li>
-                <li>
-                    <a href="http://">技能</a>
-                </li>
-                <li>
-                    <a href="http://">作品</a>
-                </li>
-                <li>
-                    <a href="http://">经历</a>
-                </li>
-                <li>
-                    <a href="http://">博客</a>
-                </li>
-                <li>
-                    <a href="http://">日历</a>
-                </li>
-                <li>
-                    <a href="http://">联系方式</a>
-                </li>
-                <li>
-                    <a href="http://">其他</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="topNavBarWrapper">
+        <div class="topNavBar clearfix">
+            <a class="logo" href="#" alt="logo">
+                <span class="rs">RS</span>
+                <span class="card">card</span>
+            </a>
+            <nav>
+                <ul class="clearfix">
+                    <li>
+                        <a href="http://">关于</a>
+                    </li>
+                    <li>
+                        <a href="http://">技能</a>
+                    </li>
+                    <li>
+                        <a href="http://">作品</a>
+                    </li>
+                    <li>
+                        <a href="http://">经历</a>
+                    </li>
+                    <li>
+                        <a href="http://">博客</a>
+                    </li>
+                    <li>
+                        <a href="http://">日历</a>
+                    </li>
+                    <li>
+                        <a href="http://">联系方式</a>
+                    </li>
+                    <li>
+                        <a href="http://">其他</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
     <div class="banner">
         <div class="mask">
@@ -209,20 +201,18 @@
         <br>
         <br>
         <br>
-        <div class="works" style="height: 597px;">
-            <div class="big" style="top: 0;left: 0;">
+        <div class="works">
+            <div class="big">
                 <img src="./img/photo-1422480041422-130238c67fe2-1-2-2-1-1-607x576.jpg" alt="">
             </div>
-            <div class="small" style="top: 0;left: 637px;">
+            <div class="small">
                 <img src="./img/photo-1421757295538-9c80958e75b0-2-2-1-1-294x278.jpg" alt="">
             </div>
-            <div class="small" style="top: 298px;left: 637px;">
+            <div class="small">
                 <img src="./img/kaboompics-1-2-1-1-294x278.jpg" alt="">
             </div>
         </div>
-
     </section>
-
 </body>
 
 </html>
