--- a/cuilei_resume_redo/index_redo.html
+++ b/cuilei_resume_redo/index_redo.html
@@ -7,15 +7,6 @@
     <title>崔磊的简历</title>
     <link rel="stylesheet" href="./style_redo.css">
     <script src="//at.alicdn.com/t/font_733809_gtuu4aoiifa.js"></script>
-    <style type="text/css">
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-    </style>
 </head>
 
 <body>
@@ -146,9 +137,12 @@
                 </a>
             </div>
         </footer>
-        <div class="resumeDownload"></div>
-        <a href="">下载pdf简历</a>
     </div>
+    <section>
+        <div class="resumeDownload">
+            <a href="">下载pdf简历</a>
+        </div>
+    </section>
 </body>
 
 </html>
