--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="//at.alicdn.com/t/font_733810_hdekfvifc65.js
-"></script>
+    <link rel="stylesheet" href="loading.css">
+    <script src="//at.alicdn.com/t/font_733810_hdekfvifc65.js"></script>
     <title>崔磊的个人简历</title>
 </head>
 
 <body>
+    <div id="loadingPage" class="loadingPage active">
+        <div class="loadingAnimation"></div>
+    </div>
     <div class="topNavBarWrapper">
         <div class="topNavBar clearfix">
             <a class="logo" href="#" alt="logo">
@@ -186,17 +189,6 @@
                 </div>
             </div>
         </nav>
-        <script>
-            portfolio1.onclick = function () {
-                state.className = "innerBar state-1"
-            }
-            portfolio2.onclick = function () {
-                state.className = "innerBar state-2"
-            }
-            portfolio3.onclick = function () {
-                state.className = "innerBar state-3"
-            }
-        </script>
         <br>
         <br>
         <br>
@@ -213,6 +205,20 @@
             </div>
         </div>
     </section>
+    <script>
+        portfolio1.onclick = function () {
+            state.className = "innerBar state-1"
+        }
+        portfolio2.onclick = function () {
+            state.className = "innerBar state-2"
+        }
+        portfolio3.onclick = function () {
+            state.className = "innerBar state-3"
+        }
+        setTimeout(function () {
+            loadingPage.classList.remove('active')
+        },3000)
+    </script>
 </body>
 
 </html>
