--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <nav class="menu">
                 <ul class="clearfix">
                     <li>
-                        <a href="http://">关于</a>
+                        <a href="#siteAbout">关于</a>
                     </li>
                     <li>
-                        <a href="http://">技能</a>
+                        <a href="#siteSkills">技能</a>
                     </li>
                     <li>
-                        <a href="http://">作品</a>
+                        <a href="#siteWorks">作品</a>
                         <ul class="subMenu" id="subMenu">
                             <li>作品1</li>
                             <li>作品2</li>
@@ -39,10 +39,10 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="http://">经历</a>
+                        <a href="#">经历</a>
                     </li>
                     <li>
-                        <a href="http://">博客</a>
+                        <a href="#">博客</a>
                         <ul class="subMenu" id="subMenu">
                             <li>博客1</li>
                             <li>博客2</li>
@@ -51,13 +51,13 @@
 
                     </li>
                     <li>
-                        <a href="http://">日历</a>
+                        <a href="#">日历</a>
                     </li>
                     <li>
-                        <a href="http://">联系方式</a>
+                        <a href="#">联系方式</a>
                     </li>
                     <li>
-                        <a href="http://">其他</a>
+                        <a href="#">其他</a>
                     </li>
                 </ul>
             </nav>
@@ -68,7 +68,7 @@
         </div>
     </div>
     <main>
-        <div class="userCard">
+        <div id="siteAbout" class="userCard">
             <div class="pictureAndText clearfix">
                 <div class="picture">
                     <img src="./img/1avatar.jpg" width="260px" alt="头像">
@@ -128,7 +128,7 @@
             <br>前端开发，node.js开发。
         </p>
     </main>
-    <section class="skills">
+    <section id="siteSkills" class="skills">
         <h2>技能</h2>
         <ol class="clearfix">
             <li>
@@ -187,7 +187,7 @@
             </li>
         </ol>
     </section>
-    <section class="portfolio">
+    <section id="siteWorks" class="portfolio">
         <h2>作品集</h2>
         <nav>
             <ol class="clearfix">
@@ -200,7 +200,6 @@
                 </div>
             </div>
         </nav>
-
         <div class="works">
             <div class="big">
                 <img src="./img/photo-1422480041422-130238c67fe2-1-2-2-1-1-607x576.jpg" alt="">
