--- a/index.html
+++ b/index.html
@@ -224,7 +224,15 @@
             </div>
         </div>
     </section>
+    <section>
+        <h2>留言</h2>
+        <form id="formMessage" action="" method="post">
+            <input type="text" name="content" id="">
+            <input type="submit" value="提交" name="content" id="">
+        </form>
+    </section>
 </body>
+<script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.9.0/dist/av-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 <script src="./node_modules/swiper/dist/js/swiper.js"></script>
 <script src="./main.js"></script>
@@ -234,5 +242,6 @@
 <script src="./js/smoothly-navigation.js"></script>
 <script src="./js/module-1.js"></script>
 <script src="./js/module-2.js"></script>
+<script src="./js/message.js"></script>
 
 </html>
