--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
-    <link rel="stylesheet" href="./node_modules/swiper/dist/css/swiper.css">
+    <link rel="stylesheet" href="./swiper.min.css">
     <script src="//at.alicdn.com/t/font_733810_hdekfvifc65.js"></script>
 
     <link rel="stylesheet" href="loading.css">
@@ -243,7 +243,7 @@
 </body>
 <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.9.0/dist/av-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
-<script src="./node_modules/swiper/dist/js/swiper.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/swipejs/2.2.11/swipe.min.js"></script>
 <script src="./main.js"></script>
 <script src="./js/init-swiper.js"></script>
 <script src="./js/auto-slide-up.js"></script>
