--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 </body>
 <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.9.0/dist/av-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/swipejs/2.2.11/swipe.min.js"></script>
+<script src="./swiper.min.js"></script>
 <script src="./main.js"></script>
 <script src="./js/init-swiper.js"></script>
 <script src="./js/auto-slide-up.js"></script>
