--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 <script src="./swiper.min.js"></script>
 <script src="./main.js"></script>
+<script src="./js/base/view.js"></script>
+<script src="./js/base/model.js"></script>
+<script src="./js/base/controller.js"></script>
 <script src="./js/init-swiper.js"></script>
 <script src="./js/auto-slide-up.js"></script>
 <script src="./js/sticky-topbar.js"></script>
